# breksta

./: .coveragerc  .env  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .pytest.ini  README.md  breksta.py  capture.py  chart.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.hydra/: config.yaml  hydra.yaml
app/: breksta.py  cache_module.py  capture.py  capture_signal.py  chart.py  config.py  database.py  logger_config.py  sine_wave_generator.py  ui_utils.py  utils.py
app/components/: export_button.py  figure.py  layout.py  slider_interval.py
app/conf/: config.yaml
device/: adc_config.py  adc_data_acquisition.py  adc_interface.py  adc_run.py  app_integration.py
docs/: TOOLING.md  adc_integration.md  troubleshooting.md
tests/: adc_ui_test.py  auxillary_ui_test.py  test_adc_configuration.py  test_adc_control_panel.py  test_adc_run.py  test_cache_module.py  test_capture_controlpanel.py  test_capture_signal.py  test_capturecontrol.py  test_captureui.py  test_central_controlpanel.py  test_chartpy.py  test_dash_components.py  test_database.py  test_exportcontrol_delete.py  test_exportcontrol_general.py  test_figure.py  test_pmt_reading.py  test_sine_wave_generator.py  test_ui_utils.py  test_utils.py
ui/: adc_controlpanel.py  adc_ui_test.py  auxillary_devices_ui.py  auxillary_ui_test.py  capture_controlpanel.py  capture_ui_test.py  central_controlpanel.py  chart_manager.py  layout.py
